--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -2,7 +2,9 @@ name: ci
 on:
   push:
     branches:
-      - 'main'
+      - 'master'
+    tags: 
+      -'v*'
 jobs:
   build:
     runs-on: ubuntu-latest
